[package]
name = "invaders"
version = "0.1.0"
authors = ["Nathan Stocks <cleancut@github.com", "Tony Duran <tony-duran@outlook.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
rusty_audio = "1.2"
rusty_time = "1.1.0"

